Fix menu on mobile

--- a/docs/website/static/css/master.css
+++ b/docs/website/static/css/master.css
@@ -1,13 +1,14 @@
-html, body {
-  min-height: 100vh;
-  position: relative;
+@media (min-width: 768px) {
+  html, body {
+    position: relative;
+    min-height: 100vh;}
+  footer {
+    width: 100%;
+    position:absolute;
+    bottom:0;
+  }
 }
 
-footer {
-  width: 100%;
-  position:absolute;
-  bottom:0;
-}
 
 body {
   font-family: Lato, Arial, sans-serif; }
@@ -884,6 +885,9 @@ body.page-account #hero {
     margin-left: 0px;
     margin-right: 0px;
   }
+  #kube-features {
+  margin-bottom: 0px;
+  }
 }
 
 .demo-head {
@@ -1065,7 +1069,7 @@ tr.border-none td {
   #main {
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 240px;
+    padding-bottom: 80px;
   }
   #action-buttons .button,
   #action-buttons button {
@@ -1163,6 +1167,6 @@ tr.border-none td {
     padding-bottom: 240px;
   }
   #kube-faq {
-    padding-bottom: 240px;
+    padding-bottom: 80px;
   }
 }
